--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "bookstore_project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A college bookstore application",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Aditya Raj",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.3",
